--- a/index.html
+++ b/index.html
@@ -4,20 +4,22 @@
 		<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 		<meta name="author" content="Christopher Lee" />
 		<link rel="stylesheet" type="text/css" href="ccompiler.css" />
+		<link rel="stylesheet" type="text/css" href="codemirror.css" />
 		<title>CCompiler - a JavaScript Compiler</title>
 	</head>
 	<body>
 		<h1>CCompiler</h1>
-		<article id="page">
-			<section id="input">
-			</section>
-			<section id="toolbar">
-				<div id="compile">Compile</div>
-			</section>
-			<section id="output">
-			</section>
-		</article>
+		<div id="page">
+			<div id="input">
+			</div>
+			<div id="compile">
+				Compile
+			</div>
+			<div id="output">
+			</div>
+		</div>
 		<script src="scripts/jquery-1.11.2.min.js" type="text/javascript" charset="utf-8"></script>
+		<script src="scripts/codemirror.js" type="text/javascript" charset="utf-8"></script>
 		<script>
 			//jQuery ready function after DOM has been loaded
 			$(document).ready(function() {
