--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<h1>CCompiler</h1>
 		<div id="page">
-			<div id="input">//Your code here...</div>
+			<div id="input"></div>
 			<div id="compile">Compile</div>
 			<div id="output"></div>
 		</div>
