Changes and tests
Changed how character position in a line is calculated, still not
perfect but close to it. Tweaked string mode detection. Still need to
fix open parentheses tokenization.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,26 @@
 	<body>
 		<h1>CCompiler</h1>
 		<div id="page">
-			<div id="input"></div>
+			<div id="input">
+{
+	int a
+	a = 1
+	{
+		int a
+		a = 2
+		print(a)
+	}
+	string b
+	b = "alan"
+	if(a == 1) {
+		print(b)
+	}
+	string c
+	c = "james"
+	b = "blackstone"
+	print(b)
+} $    
+			</div>
 			<div id="compile">Compile</div>
 			<div id="output"></div>
 		</div>
