Final raw parser commit
Split keyword token into print, while and if tokens for easier parser
recursion. Complete according to language grammar. Both lexer and parser
undergoing testing.

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 		</div>
 		<script src="scripts/jquery-1.11.2.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="src-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
+		<script src="scripts/token.js" type="text/javascript" charset="utf-8"></script>
 		<script src="scripts/lexer.js" type="text/javascript" charset="utf-8"></script>
 		<script src="scripts/ccompiler.js" type="text/javascript" charset="utf-8"></script>
 		<script>
