Minor parser tweaks
Parser now parses to output box. Great success.

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 		<script src="src-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
 		<script src="scripts/token.js" type="text/javascript" charset="utf-8"></script>
 		<script src="scripts/lexer.js" type="text/javascript" charset="utf-8"></script>
+		<script src="scripts/parser.js" type="text/javascript" charset="utf-8"></script>
 		<script src="scripts/ccompiler.js" type="text/javascript" charset="utf-8"></script>
 		<script>
 			//jQuery ready function after DOM has been loaded
