--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 } $    
 			</div>
 			<div id="compile">Compile</div>
+			<div id="verbose">Verbose On</div>
 			<div id="output"></div>
 		</div>
 		<script src="scripts/jquery-1.11.2.min.js" type="text/javascript" charset="utf-8"></script>
