--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 	<body>
 		<h1>CCompiler</h1>
 		<div id="page">
-			<div id="input">
-{
+			<div id="input">{
 	int a
 	a = 1
 	{
@@ -30,8 +29,10 @@
 } $    
 			</div>
 			<div id="compile">Compile</div>
-			<div id="verbose">Verbose On</div>
+			<div id="verbose">Verbose Off</div>
 			<div id="output"></div>
+			<div id="cst"></div>
+			<div id="ast"></div>
 		</div>
 		<script src="scripts/jquery-1.11.2.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="src-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
