Directory change and CST work
Made directories more readable with js and css folders. Began work on
CST generation concurrent to parse.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head lang="en">
 		<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 		<meta name="author" content="Christopher Lee" />
-		<link rel="stylesheet" type="text/css" href="ccompiler.css" />
+		<link rel="stylesheet" type="text/css" href="css/ccompiler.css" />
 		<title>CCompiler - a JavaScript Compiler</title>
 	</head>
 	<body>
@@ -34,12 +34,12 @@
 			<div id="cst"></div>
 			<div id="ast"></div>
 		</div>
-		<script src="scripts/jquery-1.11.2.min.js" type="text/javascript" charset="utf-8"></script>
+		<script src="js/jquery-1.11.2.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="src-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
-		<script src="scripts/token.js" type="text/javascript" charset="utf-8"></script>
-		<script src="scripts/lexer.js" type="text/javascript" charset="utf-8"></script>
-		<script src="scripts/parser.js" type="text/javascript" charset="utf-8"></script>
-		<script src="scripts/ccompiler.js" type="text/javascript" charset="utf-8"></script>
+		<script src="js/token.js" type="text/javascript" charset="utf-8"></script>
+		<script src="js/lexer.js" type="text/javascript" charset="utf-8"></script>
+		<script src="js/parser.js" type="text/javascript" charset="utf-8"></script>
+		<script src="js/ccompiler.js" type="text/javascript" charset="utf-8"></script>
 		<script>
 			//jQuery ready function after DOM has been loaded
 			$(document).ready(function() {
