--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 		<script src="js/jquery-1.11.2.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="src-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/token.js" type="text/javascript" charset="utf-8"></script>
+		<script src="js/node.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/lexer.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/parser.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/ccompiler.js" type="text/javascript" charset="utf-8"></script>
