Initial semantic analysis commit
After six hours of work last night and six hours today, the untested
basis of my semantic analyzer is complete. Bad practice to not commit
regularly, but I could not get my GitHub working for a while - forced to
reinstall the program. The analyzer is mainly one big case statement
with a handful of helper functions.

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 		<script src="js/node.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/lexer.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/parser.js" type="text/javascript" charset="utf-8"></script>
+		<script src="js/semanticanalyzer.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/ccompiler.js" type="text/javascript" charset="utf-8"></script>
 		<script>
 			//jQuery ready function after DOM has been loaded
